# kerasify

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README.md  kerasify.py  kerasify_code.py  kerasify_h5.py  make_tests.py  test_model.py
include/: tensor.h
include/keras/: io.h  layer.h  layer_weights.h  model.h  tensor.h  timer.h  utility.h
include/keras/layer/: activation.h  conv2d.h  dense.h  elu.h  embedding.h  flatten.h  lstm.h  maxpooling2d.h
include/keras/layers/: activation.h  conv1d.h  conv2d.h  dense.h  elu.h  embedding.h  flatten.h  locally1d.h  locally2d.h  lstm.h  maxpooling2d.h  normalization.h
src/: io.cpp  layer.cpp  layer_weights.cpp  model.cpp  model_test.cpp  tensor.cpp  timer.cpp  utility.cpp
src/layer/: activation.cpp  conv2d.cpp  dense.cpp  elu.cpp  embedding.cpp  flatten.cpp  lstm.cpp  maxpooling2d.cpp
src/layers/: activation.cpp  conv1d.cpp  conv2d.cpp  dense.cpp  elu.cpp  embedding.cpp  flatten.cpp  locally1d.cpp  locally2d.cpp  lstm.cpp  maxpooling2d.cpp  normalization.cpp
